--- a/style.css
+++ b/style.css
@@ -5,31 +5,93 @@
 }
 
 header {
-  background-color: #2ab8cb;
+  width: 100%;
   display: flex;
   justify-content: flex-start;
   justify-content: flex-end;
   justify-content: center;
   justify-content: space-around;
-  height: 20vh;
+  height: 15vh;
   align-items: flex-start;
   align-items: flex-end;
   align-items: center;
 }
 
-h1 {
-  border: solid red;
+div {
+  display: flex;
+  justify-content: space-between;
+  width: 16%;
+  align-items: center;
 }
 
 nav {
-  border: solid green;
   display: flex;
   justify-content: space-evenly;
   width: 40%;
+  align-items: center;
 }
 
 a {
   text-decoration: none;
-  box-sizing: 2rem;
-  color: red;
+  font-size: 1.5rem;
+  color: #485563;
+}
+
+.BtnVerdeHeader {
+  background-color: #21c05c;
+  color: #ffffff;
+  font-size: 1rem;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 6px;
+}
+
+.PrimeiraSection {
+  border: solid #000;
+  height: 50vh;
+  display: flex;
+}
+.PrimeiraSection section {
+  border: solid;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.ProdutosDisponiveis {
+  background-color: rgb(203, 244, 230);
+  height: 85vh;
+  display: flex;
+  justify-content: space-evenly;
+  justify-content: space-between;
+  justify-content: space-around;
+  align-items: flex-end;
+  align-items: flex-start;
+  align-items: center;
+}
+.ProdutosDisponiveis article {
+  border: solid red;
+  width: 20%;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.ProdutosDisponiveis article img {
+  width: 100%;
+  height: 30vh;
+  border: solid;
+}
+.ProdutosDisponiveis article button {
+  width: 45%;
+  height: 5vh;
+  cursor: pointer;
+  margin-bottom: 2rem;
+  background-color: #00ffff;
+  color: #fff;
+  font-weight: 900;
+  border-radius: 20px;
+  font-size: 0.7rem;
 }/*# sourceMappingURL=style.css.map */
