--- a/style.scss
+++ b/style.scss
@@ -1,37 +1,117 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-header{
-    background-color: #2ab8cb;
-    display: flex; // ativa as caixas flexiveis
-    justify-content: flex-start; //É o padrão. Os itens são postos no começo do eixo principal.
-    justify-content: flex-end; //Os itens são postos no final do eixo principal.
-    justify-content: center; //Os itens são postos no meio do eixo principal.
-    justify-content: space-around;// O primeiro espaço vazio e o último são iguais.
-    //justify-content: space-evenly;// Os mesmos espaçamentos entres os itens.
-    //justify-content: space-between;// O primeiro item fica no começo do eixo e o último fica no final do eixo.
-    height: 20vh;
-    align-items: flex-start;// Os itens são postos no começo do eixo Y ( vertical ).
-    align-items: flex-end;// Os itens são postos no final do eixo Y ( vertical ).
-    align-items: center;// Os itens são postos no meio do eixo Y ( vertical ).
+header {
+  width: 100%;
+  display: flex; //Ativa as caixas flexíveis
+  justify-content: flex-start; //É o padrão. Os itens são postos no começo do eixo principal.
+  justify-content: flex-end; //Os itens são postos no final do eixo principal.
+  justify-content: center; //Os itens são postos no meio do eixo principal.
+  justify-content: space-around; //O primeiro espaço vazio e o último são iguais.
+  // justify-content: space-evenly; //O mesmo espaçamento entre os itens.
+  // justify-content: space-between; // O primeiro item fica no começo do eixo e o último item fica no final do eixo.
+  height: 15vh;
+  align-items: flex-start; //Padrão. Os itens são postos no começo do eixo Y (vertical)
+  align-items: flex-end; //Os itens são postos no final do eixo Y (vertical)
+  align-items: center; //Os itens são postos no meio do eixo Y (vertical)
 }
 
-h1{
-    border: solid red;
+div {
+  //border: solid;
+  display: flex;
+  justify-content: space-between;
+  width: 16%;
+  align-items: center;
 }
 
-nav{
-    border: solid green;
+nav {
+  //border: solid rgb(14, 196, 29);
+  display: flex;
+  justify-content: space-evenly;
+  //justify-content: space-between;
+  width: 40%;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: #485563;
+}
+
+.BtnVerdeHeader {
+  background-color: #21c05c;
+  color: #ffffff;
+  font-size: 1rem;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 6px;
+}
+
+.PrimeiraSection{
+  border: solid #000;
+  height: 50vh;
+  display: flex;
+
+  
+  section{
+    border: solid;
+    width: 50%;
     display: flex;
-    justify-content: space-evenly;
-    width: 40%;
+    flex-direction: column;
+    justify-content: space-around;
+  }
 }
 
-a{
-    text-decoration: none;
-    box-sizing: 2rem;
-    color: red;
+.ProdutosDisponiveis {
+  background-color: rgb(203, 244, 230);
+  height: 85vh;
+  display: flex;
+  justify-content: space-evenly;
+  justify-content: space-between;
+  justify-content: space-around;
+  align-items: flex-end;
+  align-items: flex-start;
+  align-items: center;
+
+  article {
+    border: solid red;
+    width: 20%;
+    height: 60vh;
+    display: flex;
+    //  flex-direction: row; //Padrão (fileira). Os itens são organizados em forma de linha da esquerda para a direita.
+    // flex-direction: row-reverse; //Os itens são organizados em forma de linha (fileira) da direita para a esquerda.
+    flex-direction: column; //Os itens são organizados em coluna, de cima para baixo.
+    // flex-direction: column-reverse; //Os itens são organizados em forma de colunas iniciando de baixo para cima.
+
+    //justify-content: center;
+    //justify-content: space-evenly;
+    //justify-content: space-around;
+    justify-content: space-between;
+
+    align-items: center;
+    //align-items: flex-start;
+    //align-items: flex-end;
+
+    img {
+      width: 100%;
+      height: 30vh;
+      border: solid;
+    }
+
+    button {
+      width: 45%;
+      height: 5vh;
+      cursor: pointer;
+      margin-bottom: 2rem;
+      background-color: #00ffff;
+      color: #fff;
+      font-weight: 900;
+      border-radius: 20px;
+      font-size: 0.7rem;
+    }
+  }
 }
