--- a/style.css
+++ b/style.css
@@ -16,28 +16,24 @@ header {
   align-items: flex-end;
   align-items: center;
 }
-
-div {
+header .caixaLogo {
   display: flex;
   justify-content: space-between;
   width: 16%;
   align-items: center;
 }
-
-nav {
+header nav {
   display: flex;
   justify-content: space-evenly;
-  width: 40%;
+  width: 50%;
   align-items: center;
 }
-
-a {
+header a {
   text-decoration: none;
   font-size: 1.5rem;
   color: #485563;
 }
-
-.BtnVerdeHeader {
+header .BtnVerdeHeader {
   background-color: #21c05c;
   color: #ffffff;
   font-size: 1rem;
@@ -47,16 +43,39 @@ a {
 }
 
 .PrimeiraSection {
-  border: solid #000;
-  height: 50vh;
+  border: solid #ff0000;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 90vh;
 }
 .PrimeiraSection section {
   border: solid;
-  width: 50%;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+.PrimeiraSection section h2 {
+  font-size: 3rem;
+  font-weight: bold;
+  width: 100%;
+}
+.PrimeiraSection section p {
+  font-size: 1.25rem;
+  width: 90%;
+  border: solid green;
+}
+
+.BoxBntFirstSection {
+  border: solid purple;
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+}
+.BoxBntFirstSection button {
+  cursor: pointer;
+  padding: 30px 40px;
 }
 
 .ProdutosDisponiveis {
@@ -94,4 +113,63 @@ a {
   font-weight: 900;
   border-radius: 20px;
   font-size: 0.7rem;
+}
+
+@media (max-width: 500px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    height: 20vh;
+  }
+  .caixaLogo {
+    border: solid;
+    width: 70%;
+  }
+  nav {
+    border: solid;
+    width: 100%;
+  }
+  nav a {
+    font-size: 0.8rem;
+  }
+  nav .btnVerdeHeader {
+    font-size: 0.8rem;
+  }
+  .PrimeiraSection {
+    background-color: violet;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .PrimeiraSection section {
+    height: 80vh;
+  }
+  .PrimeiraSection section h2 {
+    font-size: 1.5rem;
+    width: 100%;
+  }
+  .PrimeiraSection section p {
+    width: 100%;
+  }
+  .PrimeiraSection section img {
+    width: 50%;
+  }
+  .BoxBntFirstSection {
+    width: 100%;
+  }
+  .produtosDisponiveis {
+    display: flex;
+    flex-direction: column;
+    background-color: pink;
+  }
+  .produtosDisponiveis article {
+    width: 80%;
+    text-align: center;
+  }
+  .produtosDisponiveis article button {
+    font-size: 1rem;
+    width: 70%;
+    font-weight: 400;
+  }
 }/*# sourceMappingURL=style.css.map */
